--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <!-- <link rel="icon" href="/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>All About Kay | Portfolio</title>
-  <script type="module" crossorigin src="/portfolio/assets/index.ecc351d9.js"></script>
-  <link rel="stylesheet" href="/portfolio/assets/index.ba086ad6.css">
+  <script type="module" crossorigin src="/assets/index.514fd4df.js"></script>
+  <link rel="stylesheet" href="/assets/index.0c0f9a06.css">
 </head>
 
 <body>
