--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- <link rel="icon" href="/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>All About Kay | Portfolio</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.6/vivus.min.js"></script>
 </head>
 
 <body>
