--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <!-- <link rel="icon" href="/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>All About Kay | Portfolio</title>
-  <script type="module" crossorigin src="/assets/index.e5da575a.js"></script>
-  <link rel="stylesheet" href="/assets/index.0c0f9a06.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.6/vivus.min.js"></script>
+  <script type="module" crossorigin src="/assets/index.c77ab815.js"></script>
+  <link rel="stylesheet" href="/assets/index.188d4601.css">
 </head>
 
 <body>
