--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" href="/favicon.ico" /> -->
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>All About Kay | Portfolio</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.6/vivus.min.js"></script>
@@ -11,8 +11,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:description" content="From cool idea to insanely great product" />
   <meta property="og:url" content="https://allaboutkay.github.io/" />
-  <meta property="og:image" content="https://allaboutkay.github.io/meta.jpg" />
-  <script type="module" crossorigin src="/assets/index.fa968ea5.js"></script>
+  <meta property="og:image" content="/meta.jpg" />
+  <script type="module" crossorigin src="/assets/index.80b6f5af.js"></script>
   <link rel="stylesheet" href="/assets/index.79e31c4c.css">
 </head>
 
